--- a/index.html
+++ b/index.html
@@ -417,8 +417,8 @@
     <!-- Hero Section -->
     <section class="hero">
         <div class="container">
-            <h1>Em breve um banco de talentos humanizado, mas de forma inteligente. </h1>
-            <p>Estamos preparando uma plataforma incrível para conectar você às melhores oportunidades do mercado</p>
+            <h1>Um banco de talentos humanizado, mas de forma inteligente. </h1>
+            <p>Estamos preparando uma plataforma incrível para conectar você às melhores oportunidades do mercado!</p>
             
             <div class="coming-soon-container">
                 <div class="coming-soon-icon">
