--- a/index.html
+++ b/index.html
@@ -3,7 +3,17 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title> inTalent Co. </title>
+    <title> inTalent Co. Onde vagas encontram talentos </title>
+    <meta name="description" content= "Banco de Talentos inTalent: Match inteligente entre profissionais e vagas exclusivas. Plataforma humanizada que conecta você às melhores empresas. Cadastre-se grátis e acelere sua carreira!">
+    <meta name="robots" content="index, follow">
+    <script type="application/ld+json">
+{
+  "@context": "https://schema.org",
+  "@type": "EmploymentAgency",
+  "name": "inTalent",
+  "description": "Banco de talentos com match inteligente para vagas exclusivas"
+}
+</script>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css">
     <style>
         * {
