--- a/index.html
+++ b/index.html
@@ -614,6 +614,13 @@
 
   gtag('config', 'G-3QK0ZXXF1T');
 </script>
+
+    <!-- Speed Insights Vercel -->
+    
+    <script>
+  window.si = window.si || function () { (window.siq = window.siq || []).push(arguments); };
+</script>
+<script defer src="/_vercel/speed-insights/script.js"></script>
     
 </body>
 </html>
